salesforce/force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <label>Transaction</label>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
        <displayFormat>TXN-{0000}</displayFormat>
    </nameField>
</CustomObject>