salesforce/force-app/main/default/objects/Transaction__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>

</CustomField>