salesforce/force-app/main/default/objects/Transaction__c/fields/Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Request__c</fullName>
    <label>Transfer Request</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>TransferRequest__c</referenceTo>
    <relationshipLabel>Transfer Request</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
</CustomField>